[gd_scene load_steps=11 format=2]

[ext_resource path="res://ScoutBullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/bullets.png" type="Texture" id=2]
[ext_resource path="res://Assets/SFX/Level 1/SciFiGun5.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Level 1/SciFiGun11.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="bullet" type="RigidBody2D"]
material = SubResource( 1 )
z_index = 7
collision_layer = 9
collision_mask = 0
mass = 5.0
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.46
one_shot = true
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 14.77
anims/idle = SubResource( 4 )
anims/shutdown = SubResource( 5 )
anims/spin = SubResource( 6 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.4
pitch_scale = 0.31
attenuation = 8.5742

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.495
pitch_scale = 2.0
autoplay = true
attenuation = 1.51572
[connection signal="body_entered" from="." to="." method="_on_bullet_body_enter"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="HitSound" to="." method="_on_HitSound_finished"]
